# inec

./: .dockerignore  .env.example  .gitattributes  .gitignore  AI_ML_PRODUCTION_AUDIT.md  AUDIT_REPORT.md  CHANGELOG.md  FINAL_INTEGRATION_REPORT.md  FINAL_PENTEST_REPORT.md  FINAL_PRODUCTION_AUDIT_REPORT.md  FINAL_PRODUCTION_READINESS_REPORT.md  FINAL_REPORT_PHASE_2.md  FINAL_SECURITY_REPORT.md  LICENSE  Makefile  PRODUCTION_READINESS_REPORT.md  README.md  docker-compose.ml.yml  docker-compose.yml  e2e_smoke.sh  patch_dc.py  pr.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
apisix-conf/: config.yaml
benchmarks/: benchmark_redis.py  go.mod  load_test.go
blockchain/fabric/: connection-profile.yaml  deploy.sh  docker-compose.yaml
caddy/: Dockerfile
campaign-platform/: Dockerfile  README.md  ideas.md  package.json  pnpm-lock.yaml  template.json  todo.md  vite.config.ts
campaign-platform/client/: index.html
campaign-platform/drizzle/: 0000_complex_fixer.sql  0000_married_next_avengers.sql  0004_previous_clint_barton.sql  schema.ts
campaign-platform/server/: db.ts  postgres.connection.test.ts  routers.ts  scheduled-tasks.json
config/: biometric-services.yaml  biometric_benchmarks.json  middleware-tuning.yaml  permify.yaml
config/apisix/: apisix.yaml  config.yaml  routes.json
config/caddy/: Caddyfile  coraza.conf
config/keycloak/: import-realm.sh  inec-realm.json
config/openappsec/: policy.yaml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: AI_SPEECH_WRITER_TECHNICAL_REPORT.md  ARCHITECTURE.md  CADDY_IMPLEMENTATION_REPORT.md  CADDY_INTEGRATION_ANALYSIS.md  DB_SEEDING.md  DEPLOYMENT_CHECKLIST.md  DIGITAL_TWIN_AND_CAMPAIGN_INNOVATIONS.md  DISASTER_RECOVERY.md  GEOLIBRE_IMPLEMENTATION_REPORT.md  INNOVATION_AND_HARDENING_REPORT.md  LOAD_TEST_RESULTS.md  NDPR_COMPLIANCE.md  OPENSOURCE_GEOSPATIAL_COMPONENTS.md  PLATFORM_READINESS_AND_CAMPAIGN_GUIDE.md  RUNBOOK.md  slides_content.md
e2e/: package-lock.json  package.json  playwright.config.ts
inec-analytics/: Dockerfile  main.py
inec-backend/: pyproject.toml
inec-backend/app/: analytics.py  auth.py  database.py  main.py  seed_data.py
inec-backend/app/routers/: audit_router.py  auth_router.py  dashboard_router.py  elections_router.py  geo_router.py  geo_router.py.bak  incidents_router.py  parties_router.py  results_router.py
inec-frontend/: .env.example  .env.production  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
inec-go-backend/: .gitignore  Dockerfile  Dockerfile.service  ai_proxy.go  ai_proxy_test.go  architecture.go  auth.go  auth_guards.go  biometric_advanced.go  biometric_benchmarks.go  biometric_benchmarks_test.go  biometric_engine.go  biometric_engine_test.go  blockchain_ipfs_audit.go  blockchain_production.go  blockers_test.go  bvas.go  compliance.go  compliance_engine.go  compliance_handlers.go  coverage_test.go  crud_handlers.go  data_retention.go  db.go  db_pool.go  dispute_resolution.go  docker-compose.services.yml  document_ai.go  domain_inec.go  election_fsm.go  ems.go  export.go  fabric_gateway.go  geo_advanced.go  geo_geolibre.go  geofencing.go  geospatial_enhanced.go  go.mod  go.sum  gorm_db.go  (+87 more)
inec-mobile/: .gitignore  app.json  eas.json  package-lock.json  package.json
k8s/: alerting.yaml  deployment.yaml  deployments-services.yaml  keda-scaled-objects.yaml  model-serving.yaml
loadtest/: k6_election_day.js  k6_election_day_full.js  k6_local_benchmark.js
migrations/: 000016_platform_improvements.sql  000017_fk_constraints.sql  000018_production_hardening.sql  001_biometric_tables.sql
ml/: Dockerfile  MODEL_CARD.md  Makefile  requirements.txt  train_all.sh  validate_models.py
mobile/: app.json  package.json
observability/: SLO.md  docker-compose.monitoring.yml
proto/: biometric.proto
scripts/: audit_route_contracts.py  audit_schema_references.py  bootstrap_integrations.py  export_anomaly_xgboost_onnx.py  fix_data_consistency.sql  generate_dbseed_manifest.py  provision.sh  seed_database  seed_gotv.sql  seed_koh_indicators.sql  seed_vetting_tasks.sql  smoke_stakeholder_workflows.py  test_dbseed.sh
security/: loadtest.go  network-policies.yaml  pentest.go  tls-config.yaml  waf-rules.yaml
services/biometric-python/: Dockerfile  facial_engine.py  fingerprint_engine.py  iris_engine.py  ml_inference.py  pad_engine.py  pg_audit.py  pyproject.toml  quality_engine.py  requirements.txt  service.py  train_pad_model.py
services/biometric-rust/: Cargo.toml  Dockerfile
services/biometric-rust/migrations/: 001_biometric_tables.sql
services/biometric-rust/src/: cancelable.rs  db.rs  main.rs  matching.rs  vault.rs
services/fluvio-stream/: Cargo.toml  Dockerfile
services/fluvio-stream/src/: main.rs  service_client.rs
services/geolibre-spatial/: Cargo.toml
services/geolibre-spatial/src/: main.rs  spatial.rs
services/gotv-analytics/: analytics_v2.py  koh_indicators.py  main.py  middleware.py  ml_serving.py  platform_analytics.py  pyproject.toml  scoring_engine.py  voting_analytics.py
services/gotv-engine/: Cargo.toml
services/gotv-engine/src/: main.rs  middleware.rs  persistence.rs  platform.rs  voting_crypto.rs
services/inference-engine/: Cargo.toml  Dockerfile
services/inference-engine/src/: main.rs  models.rs  neo4j_client.rs  service_client.rs
services/lakehouse-analytics/: Dockerfile  geolibre_export.py  main.py  pyproject.toml  requirements.txt  service_client.py
services/lakehouse-analytics/tests/: test_anomaly_detection.py
services/python-pipeline-optimizer/: dapr_bulk_processor.py  kafka_arrow_consumer.py  lakehouse_pipeline.py  main.py  opensearch_parallel.py  permify_optimizer.py  pg_copy_writer.py  pyproject.toml  redis_batch_processor.py  ruff.toml
services/rust-hot-path/: Cargo.toml
services/rust-hot-path/src/: fluvio_smart.rs  kafka_consumer.rs  main.rs  metrics.rs  opensearch.rs  pipeline.rs  redis_cluster.rs  tigerbeetle.rs
tests/: test_ml_models_integration.py
(+604 files in other folders)
