[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.129.0"}
psycopg = {extras = ["binary"], version = "^3.3.2"}
pyjwt = "^2.11.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.22"
aiosqlite = "^0.22.1"
mapbox-vector-tile = "^2.2.0"
httpx = "^0.28.1"
websockets = "^16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
