[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inec-biometric-service"
version = "1.0.0"
description = "Production biometric processing service for INEC election platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "scikit-image>=0.22.0",
    "scipy>=1.11.0",
    "onnxruntime>=1.16.0",
    "insightface>=0.7.3",
    "pydantic>=2.5.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "cryptography>=41.0.0",
    "python-multipart>=0.0.6",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
