[package]
name = "inec-biometric-vault"
version = "1.0.0"
edition = "2021"
description = "Production biometric crypto vault, template encryption, and high-speed matching for INEC"

[dependencies]
# Crypto
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
argon2 = "0.5"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22"
hex = "0.4"

# Web
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Database (required — all state persists to PostgreSQL)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# Metrics / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
rayon = "1.8"
crossbeam-channel = "0.5"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
