[package]
name = "fluvio-stream"
version = "0.1.0"
edition = "2021"
description = "INEC Election Real-Time Data Stream Processor using Fluvio"

[dependencies]
fluvio = "0.24"
fluvio-future = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
