[package]
name = "inec-geolibre-spatial"
version = "1.0.0"
edition = "2021"
description = "GeoLibre spatial analysis engine for INEC election platform"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
geojson = "0.24"
geo = "0.28"
geo-types = "0.7"
h3o = "0.6"
