[package]
name = "inec-gotv-engine"
version = "0.1.0"
edition = "2021"
description = "GOTV volunteer matching and ride-to-polls geo engine for INEC"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
geo = "0.28"
rstar = "0.12"
ordered-float = "4"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
