[project]
name = "inec-lakehouse-analytics"
version = "0.1.0"
description = "INEC Election Lakehouse Analytics + AI/ML Pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "duckdb>=1.0",
    "polars>=1.0",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "scipy>=1.13",
    "pydantic>=2.0",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "structlog>=24.1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
