[project]
name = "inec-pipeline-optimizer"
version = "0.1.0"
description = "High-throughput analytics pipeline for INEC election platform - Lakehouse, Permify, Dapr optimization"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "duckdb>=1.1.0",
    "pyarrow>=18.0.0",
    "polars>=1.14.0",
    "numpy>=2.0.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.2.0",
    "confluent-kafka>=2.6.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "asyncpg>=0.30.0",
    "orjson>=3.10.0",
    "cachetools>=5.5.0",
    "aiokafka>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
